src/objects/wi__WIWebHookConfig__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>wi__AccessKeyDev__c</fullName>
        <label>Access Key Dev</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wi__AccessKeyLive__c</fullName>
        <label>Access Key Live</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wi__AccountURLDev__c</fullName>
        <label>Account URL Dev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__AccountURLLive__c</fullName>
        <label>Account URL Live</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__ContactURLDev__c</fullName>
        <label>Contact URL Dev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__ContactURLLive__c</fullName>
        <label>Contact URL Live</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__DealURLDev__c</fullName>
        <label>Deal URL Dev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__DealURLLive__c</fullName>
        <label>Deal URL Live</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__Enable_Account_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates that all code necessary to integrate Salesforce Accounts to the WebInfinity Integration is available and configured in your org.</description>
        <inlineHelpText>Checkbox that indicates that all code necessary to integrate Salesforce Contacts to the WebInfinity Integration  is available and configured in your org.
Contact WebInfinity for more Information.</inlineHelpText>
        <label>Enable Account Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__Enable_Contact_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates that all code necessary to integrate Salesforce Contacts to the WebInfinity Integration is available and configured in your org.</description>
        <inlineHelpText>Checkbox that indicates that all code necessary to integrate Salesforce Contacts to the WebInfinity Integration  is available and configured in your org.
Contact WebInfinity for more Information.</inlineHelpText>
        <label>Enable Contact Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__Enable_Lead_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates that all code necessary to integrate Salesforce Leads to the WebInfinity Integration  is available and configured in your org.</description>
        <inlineHelpText>Checkbox that indicates that all code necessary to integrate Salesforce Leads to the WebInfinity Integration  is available and configured in your org. 
Contact WebInfinity for more Information.</inlineHelpText>
        <label>Enable Lead Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__Enable_OCR_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates that all code necessary to Link Opportunities and Contacts is available and configured is in your org.</description>
        <inlineHelpText>Checkbox that indicates that all code necessary to link Opportunities and Contacts when Leads are converted is in your org.
Requires that Contact, Opportunity and Lead Integration to WebInfinity is enabled.
Contact WebInfinity for more Information.</inlineHelpText>
        <label>Enable OCR Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__Enable_Opportunity_Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox that indicates that all code necessary to integrate Salesforce Opportunities to the WebInfinity Integration is available and configured in your org.</description>
        <inlineHelpText>Checkbox that indicates that all code necessary to integrate Salesforce Opportunities to the WebInfinity Integration is available and configured in your org.
Contact WebInfinity for more Information.</inlineHelpText>
        <label>Enable Opportunity Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wi__LeadURLDev__c</fullName>
        <label>Lead URL Dev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__LeadURLLive__c</fullName>
        <label>Lead URL Live</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__Notification_Email__c</fullName>
        <description>Email Address where emails related to WebInfinity Integration errors will be sent to.</description>
        <inlineHelpText>Email Address where emails related to WebInfinity Integration errors will be sent to.</inlineHelpText>
        <label>Notification Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>wi__OpportunityURLDev__c</fullName>
        <label>Opportunity URL Dev</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wi__OpportunityURLLive__c</fullName>
        <label>Opportunity URL Live</label>
        <type>Url</type>
    </fields>
    <label>WI Web Hook Config</label>
</CustomObject>